resources/test-data/component-based-gitops-repository/components/componentB/base/deployment-sample-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: component-b
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: component-b
  template:
    metadata:
      labels:
        app.kubernetes.io/name: component-b
    spec:
      containers:
      - name: component-b
        imagePullPolicy: Always

    # The spec for the container INTENTIONALLY does not contain image/env vars/replicas/ports, here.
    # These values should be provided by overlays on a per environment basis.
